--- a/FEM_R/model_analysis_core.Rmd
+++ b/FEM_R/model_analysis_core.Rmd
@@ -434,187 +434,186 @@ ggplot(cohort, aes(x=age, y=survival)) +
 'The Age UK almanac of disease profiles in later life', published in October 2015, contains information on the prevalence of major diseases, conditions, and syndromes affecting older people in England, broken down by age and sex. 
 
 ```{r echo = FALSE}
-
-#AgeUK
-male_au <- read.csv('../../../Validation/AgeUK-chronDisease-MALE.csv')
-female_au <- read.csv('../../../Validation/AgeUK-chronDisease-FEMALE.csv')
-
-# FEM 2014 detailed output
-#FEM_2014 <- read_dta('ELSA_Baseline/detailed_output/y2014_rep1.dta')
-## extract males and females
-#mFEM_2014 <- FEM_2014 %>% filter(male == 1)
-#fFEM_2014 <- FEM_2014 %>% filter(male == 0)
-
-# FEM 2014 summary
-#FEM <- read_dta('ELSA_Baseline/ELSA_Baseline_summary.dta')
-FEM <- read_dta('ELSA_AgeUK_core_valid/ELSA_AgeUK_core_valid_summary.dta')
-
-# Keep only year 2014 from FEM summary
-FEM <- filter(FEM, year == 2014)
-
-# Specify the age groups to extract from FEM
-ages <- c('6064', '6569', '7074', '7579', '8084', '8589', '9094', '9599', '100p')
-# Add m and f for male and female variables
-m_ages <- paste0('m_', ages)
-f_ages <- paste0('f_', ages)
-
-# Collect the age suffixes into a vector
-keep_vars <- c(m_ages, f_ages)
-# Now set up the chronic diseases in a list so we can create a bigger list with all of them produced
-diseases <- c('hibpe', 'stroke', 'diabe', 'demene', 'asthmae')
-
-# Don't like using loops but this one was just too simple to bother with figuring out the apply version
-final <- c()
-ticker <- 1
-# Generating the column (variable) names we want to keep in a loop
-for(item in diseases) {
-  for(anotherItem in keep_vars) {
-    final[ticker] <- paste0('p_', item, '_', anotherItem)
-    ticker <- ticker + 1
-  }
-}
-
-# Keep the right vars using varnames generated in loop
-FEM <- FEM %>%
-          select(c('year', all_of(final)))
-
-# Rename some vars to remove 'p_' before merging
-FEM <- FEM %>%
-          rename_at(vars(starts_with('p_')),
-                    funs(str_replace(., 'p_', ''))) %>%
-          select(!year)
-
-pivoted.FEM <- pivot_longer(data = FEM,
-                            cols = hibpe_m_6064:asthmae_f_100p, 
-                            names_to = c('Condition', 'Gender', 'Age_Group'), 
-                            names_sep = '_')
-
-# Convert value from fraction to percentage
-pivoted.FEM$value <- pivoted.FEM$value * 100
-
-# Rename cols to enable reshaping
-male_au <- male_au %>%
-                dplyr::rename(m_6064 = X60.64, m_6569 = X65.69, m_7074 = X70.74, 
-                       m_7579 = X75.79, m_8084 = X80.84, m_8589 = X85.89, 
-                       m_9094 = X90.94, m_9599 = X95.99, m_100p = Over.100) %>%
-                select(!Total)
-
-female_au <- female_au %>%
-                dplyr::rename(f_6064 = X60.64, f_6569 = X65.69, f_7074 = X70.74, 
-                       f_7579 = X75.79, f_8084 = X80.84, f_8589 = X85.89, 
-                       f_9094 = X90.94, f_9599 = X95.99, f_100p = Over.100) %>%
-                select(!Total)
-
-# Now need to reshape these datasets to long format
-pivoted.male <- pivot_longer(data = male_au,
-                             cols = m_6064:m_100p,
-                             names_to = c('Gender', 'Age_Group'),
-                             names_sep = '_')
-
-pivoted.female <- pivot_longer(data = female_au,
-                             cols = f_6064:f_100p,
-                             names_to = c('Gender', 'Age_Group'),
-                             names_sep = '_')
-
-# Now row bind these frames together, combining male and female data
-ageUK <-rbind(pivoted.male, pivoted.female)
-
-# Now need to deal with the fact that ageUK data splits heart issues into 3 different conditions
-# extract all heart related conditions for combining
-#ageUK_heart <- filter(ageUK, Condition == c('Coronary Heart Disease', 'Heart Failure', 'Atrial Fibrillation'))
-# Aggregate the values by gender and age group
-#ageUK_heart <- aggregate(ageUK_heart$value, by = list(ageUK_heart$Gender, ageUK_heart$Age_Group), FUN = sum)
-# Rename columns and add condition column back
-#colnames(ageUK_heart) <- c('Gender', 'Age_Group', 'value')
-#ageUK_heart$Condition <- 'Heart Problems'
-
-# Now drop the heart problems from original ageUK and replace with aggregate
-ageUK <- filter(ageUK, Condition != 'Coronary Heart Disease', Condition != 'Heart Failure', Condition != 'Atrial Fibrillation')
-#ageUK <- rbind(ageUK, ageUK_heart)
-
-# Rename a few just for completeness
-#ageUK$Condition <- gsub("Cancer, recent", "Cancer", ageUK$Condition)
-#ageUK$Condition <- gsub("COPD", "Lung Disease (COPD)", ageUK$Condition)
-
-# Finally, add column to specify that this is ageUK data
-ageUK$source <- "ageUK"
-
-# REMOVE CONDITIONS FROM ageUK THAT ARE NOT IN FEM (may change in future)
-#ageUK <- filter(ageUK, Condition != c('Asthma', 'Depression', 'Severe Mental Health Condition'))
-ageUK <- filter(ageUK, Condition != 'Depression', Condition != 'Severe Mental Health Conditions')
-ageUK <- filter(ageUK, Condition != 'Cancer, recent', Condition != 'COPD')
-
-# Make copy
-newFEM <- pivoted.FEM
-
-# Rename all the conditions to fit ageUK
-# NOTE: Lung disease is not a perfect match, as ageUK only contains info on COPD
-#       Therefore only validation from this will be that FEM is higher than ageUK
-#newFEM$Condition <- gsub("hearte", "Heart Problems", newFEM$Condition)
-newFEM$Condition <- gsub("hibpe", "Hypertension", newFEM$Condition)
-newFEM$Condition <- gsub("stroke", "Stroke", newFEM$Condition)
-newFEM$Condition <- gsub("diabe", "Diabetes", newFEM$Condition)
-#newFEM$Condition <- gsub("lunge", "Lung Disease (COPD)", newFEM$Condition)
-#newFEM$Condition <- gsub("cancre", "Cancer", newFEM$Condition)
-newFEM$Condition <- gsub("demene", "Dementia", newFEM$Condition)
-newFEM$Condition <- gsub("asthmae", "Asthma", newFEM$Condition)
-
-
-#force Make to run this again
-
-# Add column to specify this is FEM data
-newFEM$source <- "FEM"
-
-# Now row bind the datasets
-combined <- rbind(newFEM, ageUK)
-# Specify factor levels for age group
-combined$Age_Group <- factor(combined$Age_Group, levels = c('6064', '6569', '7074', '7579', '8084', '8589', '9094', '9599', '100p'))
-# Sort
-combined <- arrange(combined, source, Condition, Gender, Age_Group)
-
-# Function to filter the combined dataset and visualise
-visAgeUKValid <- function(data, cd, gender, path = '/home/luke/Documents/E_FEM_clean/Deliverables/E-FEM_Paper/figures/validation/ageUK/') {
-  
-  if(gender == 'm') {
-    full_gender <- 'Male'
-  }
-  else if(gender == 'f') {
-    full_gender <- 'Female'
-  }
-  
-  # filter by gender and condition
-  data <- data %>%
-            filter(Gender == gender) %>%
-            filter(Condition == cd)
-  
-  # now plot!
-  p <- ggplot(data = data, aes(x = Age_Group, y = value)) +
-          geom_bar(aes(fill = source), stat = "identity", position = "dodge") +
-          labs(title = paste(cd, full_gender, sep = ' '), x = 'Age Group', y = 'Proportion')
-  
-  # Save plot into in E-FEM_Paper/figures/
-  ggsave(filename = paste0(cd, '_', gender, '.png'),
-         plot = p,
-         path = path,
-         width = 6,
-         height = 4)
-  
-  return(p)
-}
+# #AgeUK
+# male_au <- read.csv('../../../Validation/AgeUK-chronDisease-MALE.csv')
+# female_au <- read.csv('../../../Validation/AgeUK-chronDisease-FEMALE.csv')
+# 
+# # FEM 2014 detailed output
+# #FEM_2014 <- read_dta('ELSA_Baseline/detailed_output/y2014_rep1.dta')
+# ## extract males and females
+# #mFEM_2014 <- FEM_2014 %>% filter(male == 1)
+# #fFEM_2014 <- FEM_2014 %>% filter(male == 0)
+# 
+# # FEM 2014 summary
+# #FEM <- read_dta('ELSA_Baseline/ELSA_Baseline_summary.dta')
+# FEM <- read_dta('ELSA_AgeUK_core_valid/ELSA_AgeUK_core_valid_summary.dta')
+# 
+# # Keep only year 2014 from FEM summary
+# FEM <- filter(FEM, year == 2014)
+# 
+# # Specify the age groups to extract from FEM
+# ages <- c('6064', '6569', '7074', '7579', '8084', '8589', '9094', '9599', '100p')
+# # Add m and f for male and female variables
+# m_ages <- paste0('m_', ages)
+# f_ages <- paste0('f_', ages)
+# 
+# # Collect the age suffixes into a vector
+# keep_vars <- c(m_ages, f_ages)
+# # Now set up the chronic diseases in a list so we can create a bigger list with all of them produced
+# diseases <- c('hibpe', 'stroke', 'diabe', 'demene', 'asthmae')
+# 
+# # Don't like using loops but this one was just too simple to bother with figuring out the apply version
+# final <- c()
+# ticker <- 1
+# # Generating the column (variable) names we want to keep in a loop
+# for(item in diseases) {
+#   for(anotherItem in keep_vars) {
+#     final[ticker] <- paste0('p_', item, '_', anotherItem)
+#     ticker <- ticker + 1
+#   }
+# }
+# 
+# # Keep the right vars using varnames generated in loop
+# FEM <- FEM %>%
+#           select(c('year', all_of(final)))
+# 
+# # Rename some vars to remove 'p_' before merging
+# FEM <- FEM %>%
+#           rename_at(vars(starts_with('p_')),
+#                     funs(str_replace(., 'p_', ''))) %>%
+#           select(!year)
+# 
+# pivoted.FEM <- pivot_longer(data = FEM,
+#                             cols = hibpe_m_6064:asthmae_f_100p, 
+#                             names_to = c('Condition', 'Gender', 'Age_Group'), 
+#                             names_sep = '_')
+# 
+# # Convert value from fraction to percentage
+# pivoted.FEM$value <- pivoted.FEM$value * 100
+# 
+# # Rename cols to enable reshaping
+# male_au <- male_au %>%
+#                 dplyr::rename(m_6064 = X60.64, m_6569 = X65.69, m_7074 = X70.74, 
+#                        m_7579 = X75.79, m_8084 = X80.84, m_8589 = X85.89, 
+#                        m_9094 = X90.94, m_9599 = X95.99, m_100p = Over.100) %>%
+#                 select(!Total)
+# 
+# female_au <- female_au %>%
+#                 dplyr::rename(f_6064 = X60.64, f_6569 = X65.69, f_7074 = X70.74, 
+#                        f_7579 = X75.79, f_8084 = X80.84, f_8589 = X85.89, 
+#                        f_9094 = X90.94, f_9599 = X95.99, f_100p = Over.100) %>%
+#                 select(!Total)
+# 
+# # Now need to reshape these datasets to long format
+# pivoted.male <- pivot_longer(data = male_au,
+#                              cols = m_6064:m_100p,
+#                              names_to = c('Gender', 'Age_Group'),
+#                              names_sep = '_')
+# 
+# pivoted.female <- pivot_longer(data = female_au,
+#                              cols = f_6064:f_100p,
+#                              names_to = c('Gender', 'Age_Group'),
+#                              names_sep = '_')
+# 
+# # Now row bind these frames together, combining male and female data
+# ageUK <-rbind(pivoted.male, pivoted.female)
+# 
+# # Now need to deal with the fact that ageUK data splits heart issues into 3 different conditions
+# # extract all heart related conditions for combining
+# #ageUK_heart <- filter(ageUK, Condition == c('Coronary Heart Disease', 'Heart Failure', 'Atrial Fibrillation'))
+# # Aggregate the values by gender and age group
+# #ageUK_heart <- aggregate(ageUK_heart$value, by = list(ageUK_heart$Gender, ageUK_heart$Age_Group), FUN = sum)
+# # Rename columns and add condition column back
+# #colnames(ageUK_heart) <- c('Gender', 'Age_Group', 'value')
+# #ageUK_heart$Condition <- 'Heart Problems'
+# 
+# # Now drop the heart problems from original ageUK and replace with aggregate
+# ageUK <- filter(ageUK, Condition != 'Coronary Heart Disease', Condition != 'Heart Failure', Condition != 'Atrial Fibrillation')
+# #ageUK <- rbind(ageUK, ageUK_heart)
+# 
+# # Rename a few just for completeness
+# #ageUK$Condition <- gsub("Cancer, recent", "Cancer", ageUK$Condition)
+# #ageUK$Condition <- gsub("COPD", "Lung Disease (COPD)", ageUK$Condition)
+# 
+# # Finally, add column to specify that this is ageUK data
+# ageUK$source <- "ageUK"
+# 
+# # REMOVE CONDITIONS FROM ageUK THAT ARE NOT IN FEM (may change in future)
+# #ageUK <- filter(ageUK, Condition != c('Asthma', 'Depression', 'Severe Mental Health Condition'))
+# ageUK <- filter(ageUK, Condition != 'Depression', Condition != 'Severe Mental Health Conditions')
+# ageUK <- filter(ageUK, Condition != 'Cancer, recent', Condition != 'COPD')
+# 
+# # Make copy
+# newFEM <- pivoted.FEM
+# 
+# # Rename all the conditions to fit ageUK
+# # NOTE: Lung disease is not a perfect match, as ageUK only contains info on COPD
+# #       Therefore only validation from this will be that FEM is higher than ageUK
+# #newFEM$Condition <- gsub("hearte", "Heart Problems", newFEM$Condition)
+# newFEM$Condition <- gsub("hibpe", "Hypertension", newFEM$Condition)
+# newFEM$Condition <- gsub("stroke", "Stroke", newFEM$Condition)
+# newFEM$Condition <- gsub("diabe", "Diabetes", newFEM$Condition)
+# #newFEM$Condition <- gsub("lunge", "Lung Disease (COPD)", newFEM$Condition)
+# #newFEM$Condition <- gsub("cancre", "Cancer", newFEM$Condition)
+# newFEM$Condition <- gsub("demene", "Dementia", newFEM$Condition)
+# newFEM$Condition <- gsub("asthmae", "Asthma", newFEM$Condition)
+# 
+# 
+# #force Make to run this again
+# 
+# # Add column to specify this is FEM data
+# newFEM$source <- "FEM"
+# 
+# # Now row bind the datasets
+# combined <- rbind(newFEM, ageUK)
+# # Specify factor levels for age group
+# combined$Age_Group <- factor(combined$Age_Group, levels = c('6064', '6569', '7074', '7579', '8084', '8589', '9094', '9599', '100p'))
+# # Sort
+# combined <- arrange(combined, source, Condition, Gender, Age_Group)
+# 
+# # Function to filter the combined dataset and visualise
+# visAgeUKValid <- function(data, cd, gender, path = '/home/luke/Documents/E_FEM_clean/Deliverables/E-FEM_Paper/figures/validation/ageUK/') {
+#   
+#   if(gender == 'm') {
+#     full_gender <- 'Male'
+#   }
+#   else if(gender == 'f') {
+#     full_gender <- 'Female'
+#   }
+#   
+#   # filter by gender and condition
+#   data <- data %>%
+#             filter(Gender == gender) %>%
+#             filter(Condition == cd)
+#   
+#   # now plot!
+#   p <- ggplot(data = data, aes(x = Age_Group, y = value)) +
+#           geom_bar(aes(fill = source), stat = "identity", position = "dodge") +
+#           labs(title = paste(cd, full_gender, sep = ' '), x = 'Age Group', y = 'Proportion')
+#   
+#   # Save plot into in E-FEM_Paper/figures/
+#   ggsave(filename = paste0(cd, '_', gender, '.png'),
+#          plot = p,
+#          path = path,
+#          width = 6,
+#          height = 4)
+#   
+#   return(p)
+# }
 
 ```
 
-```{r}
-# Collect all conditions (and both genders) into a list, and apply the function above to that list
-cd_list <- unique(combined$Condition)
-gender_list <- unique(combined$Gender)
-
-for(cd in cd_list) {
-  for(gen in gender_list) {
-    plot <- visAgeUKValid(combined, cd, gen)
-    print(plot)
-  }
-}
+```{r echo=FALSE}
+# # Collect all conditions (and both genders) into a list, and apply the function above to that list
+# cd_list <- unique(combined$Condition)
+# gender_list <- unique(combined$Gender)
+# 
+# for(cd in cd_list) {
+#   for(gen in gender_list) {
+#     plot <- visAgeUKValid(combined, cd, gen)
+#     print(plot)
+#   }
+# }
 ```
 
 # Smoking
